[project]
name = "usgs-quakemon"
version = "1.0.5"
authors = [
  { name="Ryan Steed", email="ryan.steed.usa@pm.me" },
  { name="baraclese", email="1628879+baraclese@users.noreply.github.com" },
]
maintainers = [
  { name="Ryan Steed", email="ryan.steed.usa@pm.me" },
]
description = "Monitor USGS earthquake feeds with Python 3 from a CLI terminal."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
keywords = ["earthquake", "monitor", "usgs", "feed", "terminal", "cli"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Other Audience",
  "Intended Audience :: Science/Research",
  "Environment :: Console",
  "Topic :: Scientific/Engineering",
  "Topic :: Terminals",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "requests",
  "tabulate",
]

[project.scripts]
usgs-quakemon = "usgsquakemon:main"

[project.urls]
Homepage = "https://github.com/ryan-steed-usa/usgs-quakemon"
Issues = "https://github.com/ryan-steed-usa/usgs-quakemon/issues"

[tool.ruff]
line-length = 80
target-version = "py310"
